<resources>
    <string name="app_name">Tienda</string>
    <string name="btntIngresar">Ingresar</string>
    <string name="btntregistarse">Registrarse</string>
    <string name="txttregistarse">Crear Cuenta</string>
    <string name="btntGuadar">Guardar</string>
    <string name="btntTienda">Tienda</string>
    <string name="btntCancelar">Cancelar</string>
    <string name="btntCategoria">CATEGORIA</string>
    <string name="btntProducto">PRODUCTO</string>
    <string name="btntPromo">PROMOCIÓN</string>
    <string name="txttMenu">MENÚ</string>
    <string name="btntSalir">SALIR</string>
    <string name="btntTiendas">TIENDAS</string>
    <string name="txttTienda">TIENDA</string>
    <string name="txttDireccion">Dirección</string>
    <string name="txttLista">Lista</string>
    <string name="btnMisDatos">MI INFO</string>
    <string name="google_maps_key" templateMergeStrategy="preserve"
        translatable="false">
      AIzaSyAHPVz5dA848IlEE7IkEEBDgrvVadwRo0s
   </string>
</resources>
