<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:scrollbarSize="4dp"
    tools:context=".MenuView">

    <Button
        android:id="@+id/btnPromo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="76dp"
        android:text="@string/btntPromo"
        app:layout_constraintBottom_toTopOf="@+id/btnSalir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnProducto"
        app:layout_constraintTop_toBottomOf="@+id/btnCategoria" />

    <Button
        android:id="@+id/btnTienda"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/btntTiendas"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnCategoria"
        app:layout_constraintEnd_toStartOf="@+id/btnCategoria"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnCategoria"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="24dp"
        android:text="@string/btntCategoria"
        app:layout_constraintBottom_toTopOf="@+id/btnPromo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnTienda"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btnProducto"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="19dp"
        android:layout_marginRight="19dp"
        android:text="@string/btntProducto"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnPromo"
        app:layout_constraintEnd_toStartOf="@+id/btnPromo"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:layout_marginBottom="54dp"
        android:scrollbarSize="4dp"
        android:text="@string/txttMenu"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btnCategoria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnSalir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPromo"
        app:srcCompat="@android:drawable/ic_lock_power_off" />

</androidx.constraintlayout.widget.ConstraintLayout>