<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".Registro"
    tools:layout_editor_absoluteX="-7dp"
    tools:layout_editor_absoluteY="-47dp">

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Nombre"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/txtApellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:hint="Apellido"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/txtNombre"
        app:layout_constraintTop_toBottomOf="@+id/txtNombre" />

    <EditText
        android:id="@+id/txtTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="Telefono"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/txtApellido"
        app:layout_constraintTop_toBottomOf="@+id/txtApellido" />

    <EditText
        android:id="@+id/txtCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:hint="Corréo electrónico"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/txtTelefono"
        app:layout_constraintTop_toBottomOf="@+id/txtTelefono" />

    <EditText
        android:id="@+id/txtNick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:ems="10"
        android:hint="Nick"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/txtCorreo"
        app:layout_constraintTop_toBottomOf="@+id/txtCorreo" />

    <EditText
        android:id="@+id/txtContraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:hint="Contraseña"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/txtNick"
        app:layout_constraintTop_toBottomOf="@+id/txtNick" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/txttregistarse"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/chbTienda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/btntTienda"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtContraseña" />

    <Button
        android:id="@+id/btnGuardarRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btntGuadar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnCancelar" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        tools:layout_editor_absoluteX="-7dp"
        tools:layout_editor_absoluteY="533dp" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btntCancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnGuardarRegistro"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>